--- a/WestsideAuto/salesForm.html
+++ b/WestsideAuto/salesForm.html
@@ -64,7 +64,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form action="insertCustomer.php" method="post">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm">
@@ -128,7 +128,7 @@
                         <div class="row">
                             <div class="col-sm">
                                 <label for="dln">Driver's Licence Number</label>
-                                <input type="text" class="form-control" id="dln" placeholder="Enter driver's licence number">
+                                <input type="text" class="form-control" name="dln" id="dln" placeholder="Enter driver's licence number">
                             </div>
                         </div>
                     </div>
@@ -150,6 +150,9 @@
     </div>
 </div>
 
+<form action="insertCustomer.php" method="post">
+    <button type="submit" class="btn btn-primary"></button>
+</form>
 
 <!--<div id="salesFormTop" style="padding: 30px">-->
 <!--<form action="">-->
