--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -127,8 +127,7 @@
             <div class="row">
                 <div class="col-sm">
                     <button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>
-                    <!--<button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>-->
-                    <!--<button type="submit" class="btn btn-primary">Submit</button>-->
+                    <button class="btn btn-secondary" type="reset" value="Reset">Reset</button>
                 </div>
             </div>
         </div>
