--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -31,12 +31,12 @@
         </div>
     </div>
 
-    <form id="purchaseInfo">
+    <form id="purchaseInfo" action="insertIntoDB.php" method="post">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
                     <label for="date">Date</label>
-                    <input type="date" class="form-control" id="date" placeholder="YYYY/DD/MM">
+                    <input type="date" class="form-control" id="date" name="date_of_purchase" placeholder="YYYY/DD/MM">
                 </div>
             </div>
         </div>
@@ -44,11 +44,11 @@
             <div class="row">
                 <div class="col-sm">
                     <label for="location">Location</label>
-                    <input type="text" class="form-control" id="location" placeholder="Enter location">
+                    <input type="text" class="form-control" id="location" name="location" placeholder="Enter location">
                 </div>
                 <div class="col-sm">
                     <label for="seller">Seller/Dealer</label>
-                    <input type="text" class="form-control" id="seller" placeholder="Enter Seller/Dealer">
+                    <input type="text" class="form-control" id="seller" name="seller" placeholder="Enter Seller/Dealer">
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-sm">
                     <label for="inputState">Auction</label>
-                    <select id="inputState" class="form-control">
+                    <select id="inputState" name="isAuction" class="form-control">
                         <option selected>Purchased at auction</option>
                         <option>Yes</option>
                         <option>No</option>
@@ -75,15 +75,15 @@
             <div class="row">
                 <div class="col-sm">
                     <label for="make">Make</label>
-                    <input type="text" class="form-control" id="make" placeholder="Enter make of the vehicle">
+                    <input type="text" class="form-control" id="make" name="make" placeholder="Enter make of the vehicle">
                 </div>
                 <div class="col-sm">
                     <label for="model">Model</label>
-                    <input type="text" class="form-control" id="model" placeholder="Enter model of the vehicle">
+                    <input type="text" class="form-control" id="model" name="model" placeholder="Enter model of the vehicle">
                 </div>
                 <div class="col-sm">
                     <label for="year">Year</label>
-                    <input type="text" class="form-control" id="year" placeholder="Enter year of the vehicle">
+                    <input type="text" class="form-control" id="year" name="year" placeholder="Enter year of the vehicle">
                 </div>
             </div>
         </div>
@@ -91,42 +91,68 @@
             <div class="row">
                 <div class="col-sm">
                     <label for="colour">Colour</label>
-                    <input type="text" class="form-control" id="colour" placeholder="Enter Colour">
+                    <input type="text" class="form-control" id="colour" name="color" placeholder="Enter Colour">
                 </div>
                 <div class="col-sm">
-                    <label for="miles">Miles</label>
-                    <input type="text" class="form-control" id="miles" placeholder="Enter mileage">
+                    <label for="KM">Kilometers</label>
+                    <input type="text" class="form-control" id="KM" name="kilometers" placeholder="Enter mileage">
                 </div>
                 <div class="col-sm">
                     <label for="condition">Condition</label>
-                    <input type="text" class="form-control" id="condition" placeholder="Enter condition">
+                    <input type="text" class="form-control" id="condition" name="vehicle_condition" placeholder="Enter condition">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <label for="bookPrice"> Book Price</label>
-                    <input type="text" class="form-control" id="bookPrice" placeholder="Enter the book price">
+                    <label for="interiorColour">Interior Colour</label>
+                    <input type="text" class="form-control" id="interiorColour" name="interior_color" placeholder="Enter Interior Colour">
                 </div>
                 <div class="col-sm">
-                    <label for="purchasePrice"> Purchased Price</label>
-                    <input type="text" class="form-control" id="purchasePrice" placeholder="Enter the purchased price">
+                    <label for="style">Style</label>
+                    <input type="text" class="form-control" id="style" name="style" placeholder="Enter style">
+                </div>
+                <div class="col-sm">
+                    <label for="trim">Trim</label>
+                    <input type="text" class="form-control" id="trim" name="trim" placeholder="Enter trim">
                 </div>
             </div>
         </div>
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="col-sm">-->
+                    <!--<label for="bookPrice"> Book Price</label>-->
+                    <!--<input type="text" class="form-control" id="bookPrice" placeholder="Enter the book price">-->
+                <!--</div>-->
+                <!--<div class="col-sm">-->
+                    <!--<label for="purchasePrice"> Purchased Price</label>-->
+                    <!--<input type="text" class="form-control" id="purchasePrice" placeholder="Enter the purchased price">-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="container">
             <div class="row">
                 <div class="col-sm">
                     <label for="vin">Vehicle VIN</label>
-                    <input type="text" class="form-control" id="vin" placeholder="Enter the VIN number">
+                    <input type="text" class="form-control" id="vin" name="VIN" placeholder="Enter the VIN number">
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <label for="purchase_id">purch id</label>
+                    <input type="text" class="form-control" id="purchase_id" name="purchase_ID" placeholder="">
+                </div>
+            </div>
+        </div>
+        <input type="hidden" name="insert_into" value="purchased">
         <div class="container" style="padding-top: 30px">
             <div class="row">
                 <div class="col-sm">
-                    <button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>
+                    <!--<button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>-->
+                    <a class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</a>
                     <button class="btn btn-secondary" type="reset" value="Reset">Reset</button>
                 </div>
             </div>
