--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -160,6 +160,27 @@
     </form>
 </div>
 
+
+<form action="searchDB.php" method="post" id="searchVIN">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <label for="search_vin">Search</label>
+                <input type="text" class="form-control" id="search_vin" name="VIN" placeholder="">
+            </div>
+        </div>
+    </div>
+    <input type="hidden" name="search" value="vehicles_on_lot">
+    <div class="container" style="padding-top: 30px">
+        <div class="row">
+            <div class="col-sm">
+                <!--<button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>-->
+                <a class="btn btn-primary" onclick="checkInputs('searchVIN')">Submit</a>
+                <button class="btn btn-secondary" type="reset" value="Reset">Reset</button>
+            </div>
+        </div>
+    </div>
+</form>
 <script src="myScripts.js"></script>
 </body>
 
