--- a/WestsideAuto/index.html
+++ b/WestsideAuto/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="utf-8">
     <title>WestSide Autos</title>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -14,7 +15,6 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
@@ -27,37 +27,37 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <a href="#" class="btn">Sell a Vehicle</a>
+            <a href="#" class="btn homeOptions">Sell a Vehicle</a>
         </div>
     </div>
 </div>
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <a href="purchaseForm.html" class="btn">Add a Vehicle to the Inventory</a>
+            <a href="purchaseForm.html" class="btn homeOptions">Add a Vehicle to the Inventory</a>
         </div>
         <div class="col-sm">
-            <a href="#" class="btn">Lookup Inventory</a>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col-sm">
-            <a href="#" class="btn">Add a New Customer </a>
-        </div>
-        <div class="col-sm">
-            <a href="#" class="btn">Lookup Customers</a>
+            <a href="#" class="btn homeOptions">Lookup Inventory</a>
         </div>
     </div>
 </div>
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <a href="#" class="btn">Add a New Employee</a>
+            <a href="newCustomerForm.html" class="btn homeOptions">Add a New Customer </a>
         </div>
         <div class="col-sm">
-            <a href="#" class="btn">Lookup Sales</a>
+            <a href="#" class="btn homeOptions">Lookup Customers</a>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <a href="newEmployeeForm.html" class="btn homeOptions">Add a New Employee</a>
+        </div>
+        <div class="col-sm">
+            <a href="#" class="btn homeOptions">Lookup Sales</a>
         </div>
     </div>
 </div>
