added sales forms

--- a/WestsideAuto/newEmployeeForm.html
+++ b/WestsideAuto/newEmployeeForm.html
@@ -14,7 +14,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/myStyle.css">
 </head>
 <body>
 <div class="jumbotron">
@@ -123,6 +123,6 @@
         </form>
     </div>
 </div>
-<script src="myScripts.js"></script>
+<script src="javascript/myScripts.js"></script>
 </body>
 </html>
