--- a/WestsideAuto/saleNewCustomer.html
+++ b/WestsideAuto/saleNewCustomer.html
@@ -23,7 +23,7 @@
 </div>
 
 <div id="employeeFormTop" class="topDiv">
-    <a href="index.html"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
+    <a href="saleCustomerSearch.html"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
     <div class="container">
         <div class="row">
             <div class="col-sm">
@@ -113,6 +113,6 @@
         </form>
     </div>
 </div>
-    <script src="javascript/myScripts.js"></script>
+<script src="javascript/myScripts.js"></script>
 </body>
 </html>
