--- a/WestsideAuto/index.html
+++ b/WestsideAuto/index.html
@@ -15,7 +15,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/myStyle.css">
 </head>
 <body>
 <div class="jumbotron">
@@ -27,7 +27,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <a href="#" class="btn homeOptions">Sell a Vehicle</a>
+            <a href="saleCustomerSearch.html" class="btn homeOptions">Sell a Vehicle</a>
         </div>
     </div>
 </div>
