--- a/WestsideAuto/salesForm.html
+++ b/WestsideAuto/salesForm.html
@@ -14,374 +14,76 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style/myStyle.css">
 </head>
 <body>
-<div id="header">
-    <h1>Westside Auto</h1>
+<div class="jumbotron">
+    <a href="index.html"><h1 class="display-4">Westside Autos</h1></a>
+    <hr class="my-4">
 </div>
-<div id="navBar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><h3>Forms</h3></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/purchaseForm.html">Purchase </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/salesForm.html">Sales <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/warrantiesForm.html">Warranties</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/paymentsForm.html">Payments</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-</button>
-
-<!-- New Customer Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalLabel">Add new customer</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<div id="purchaseFormTop" class="topDiv">
+    <a href="saleVehicleSearch.html"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h1>Vehicle Sale</h1>
             </div>
-            <div class="modal-body">
-                <form action="insertCustomer.php" method="post">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm">
-                                <label for="customerLastName">Last Name</label>
-                                <input type="text" class="form-control" id="customerLastName"
-                                       placeholder="Enter last name">
-                            </div>
-                            <div class="col-sm">
-                                <label for="customerFirstName">First Name</label>
-                                <input type="text" class="form-control" id="customerFirstName"
-                                       placeholder="Enter first name">
-                            </div>
-                            <div class="col-sm">
-                                <label for="customerPhone">Phone</label>
-                                <input type="text" class="form-control" id="customerPhone"
-                                       placeholder="Enter phone number">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm">
-                                <label for="address">Address</label>
-                                <input type="text" class="form-control" id="address" placeholder="Enter street address">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm">
-                                <label for="city">City</label>
-                                <input type="text" class="form-control" id="city" placeholder="Enter city">
-                            </div>
-                            <div class="col-sm">
-                                <label for="province">Province</label>
-                                <select id="province" class="form-control">
-                                    <option selected>Province</option>
-                                    <option>Alberta</option>
-                                    <option>British Columbia</option>
-                                    <option>Manitoba</option>
-                                    <option>New Brunswick</option>
-                                    <option>Newfoundland and Labrador</option>
-                                    <option>Nova Scotia</option>
-                                    <option>Ontario</option>
-                                    <option>Prince Edward Island</option>
-                                    <option>Quebec</option>
-                                    <option>Saskatchewan</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm">
-                                <label for="postalCode">Postal Code</label>
-                                <input type="text" class="form-control" id="postalCode" placeholder="Enter postal code">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm">
-                                <label for="dln">Driver's Licence Number</label>
-                                <input type="text" class="form-control" name="dln" id="dln" placeholder="Enter driver's licence number">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container" style="padding-top: 20px">
-                        <div class="row">
-                            <div class="col-sm">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
-            <!--</div>-->
         </div>
     </div>
+    <form action="" id="saleInfo">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <label for="date">Date</label>
+                    <input type="date" class="form-control" id="date" placeholder="DD/MM/YYYY">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <label for="totalDue">Total Due</label>
+                    <input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"
+                           class="form-control" id="totalDue" placeholder="$">
+                </div>
+                <div class="col-sm">
+                    <label for="downPayment">Down Payment</label>
+                    <input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"
+                           class="form-control" id="downPayment" placeholder="$">
+                </div>
+                <div class="col-sm">
+                    <label for="financeAmount">Finance Amount</label>
+                    <input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"
+                           class="form-control" id="financeAmount" placeholder="$">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <label for="empid">Employee id</label>
+                    <input type="text" step="100" class="form-control" id="empid" name="empid"
+                           placeholder="Enter employee id">
+                </div>
+                <div class="col-sm">
+                    <label for="commission">Sale commission</label>
+                    <input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"
+                           class="form-control" id="commission" placeholder="$">
+                </div>
+            </div>
+        </div>
+        <div class="container" style="padding-top: 30px">
+            <div class="row">
+                <div class="col-sm">
+                    <!--<button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>-->
+                    <a class="btn btn-primary" onclick="checkInputs('saleInfo')">Submit</a>
+                    <button class="btn btn-secondary" type="reset" value="Reset">Reset</button>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
+<script src="javascript/myScripts.js"></script>
 
-<form action="insertCustomer.php" method="post">
-    <button type="submit" class="btn btn-primary"></button>
-</form>
-
-<!--<div id="salesFormTop" style="padding: 30px">-->
-<!--<form action="">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<h2>Sale</h2>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<hr>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="date">Date</label>-->
-<!--<input type="date" class="form-control" id="date" placeholder="DD/MM/YYYY">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="totalDue">Total Due</label>-->
-<!--<input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"-->
-<!--class="form-control" id="totalDue" placeholder="$">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="downPayment">Down Payment</label>-->
-<!--<input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"-->
-<!--class="form-control" id="downPayment" placeholder="$">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="financeAmount">Finance Amount</label>-->
-<!--<input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"-->
-<!--class="form-control" id="financeAmount" placeholder="$">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<h2>Salesperson</h2>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<hr>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="salesPersonLastName">Last Name</label>-->
-<!--<input type="text" class="form-control" id="salesPersonLastName" placeholder="Enter last name">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="salesPersonFirstName">First Name</label>-->
-<!--<input type="text" class="form-control" id="salesPersonFirstName"-->
-<!--placeholder="Enter first name">-->
-<!--</div>-->
-
-<!--<div class="col-sm">-->
-<!--<label for="salesPersonPhone">Phone</label>-->
-<!--<input type="text" class="form-control" id="salesPersonPhone" placeholder="Enter phone number">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="commission">Commission</label>-->
-<!--<input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"-->
-<!--class="form-control" id="commission" placeholder="$">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<h2>Customer</h2>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<hr>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="customerLastName">Last Name</label>-->
-<!--<input type="text" class="form-control" id="customerLastName" placeholder="Enter last name">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="customerFirstName">First Name</label>-->
-<!--<input type="text" class="form-control" id="customerFirstName" placeholder="Enter first name">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="customerPhone">Phone</label>-->
-<!--<input type="text" class="form-control" id="customerPhone" placeholder="Enter phone number">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="address">Address</label>-->
-<!--<input type="text" class="form-control" id="address" placeholder="Enter street address">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="city">City</label>-->
-<!--<input type="text" class="form-control" id="city" placeholder="Enter city">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="province">Province</label>-->
-<!--<select id="province" class="form-control">-->
-<!--<option selected>Province</option>-->
-<!--<option>Alberta</option>-->
-<!--<option>British Columbia</option>-->
-<!--<option>Manitoba</option>-->
-<!--<option>New Brunswick</option>-->
-<!--<option>Newfoundland and Labrador</option>-->
-<!--<option>Nova Scotia</option>-->
-<!--<option>Ontario</option>-->
-<!--<option>Prince Edward Island</option>-->
-<!--<option>Quebec</option>-->
-<!--<option>Saskatchewan</option>-->
-<!--</select>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="postalCode">Postal Code</label>-->
-<!--<input type="text" class="form-control" id="postalCode" placeholder="Enter postal code">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<h2>Vehicle Info</h2>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<hr>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="miles">Miles</label>-->
-<!--<input type="number" step="1000" data-number-to-fixed="2" data-number-stepfactor="1000"-->
-<!--class="form-control" id="miles" placeholder="Miles">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="condition">Condition</label>-->
-<!--<input type="text" class="form-control" id="condition" placeholder="Vehicle condition">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="bookPrice">Book Price</label>-->
-<!--<input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"-->
-<!--class="form-control" id="bookPrice" placeholder="$">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<label for="salePrice">Sale Price</label>-->
-<!--<input type="number" step="100" data-number-to-fixed="2" data-number-stepfactor="100"-->
-<!--class="form-control" id="salePrice" placeholder="$">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="interiorColour">Interior Colour</label>-->
-<!--<input type="text" class="form-control" id="interiorColour" placeholder="Enter interior colour">-->
-<!--</div>-->
-<!--<div class="col-sm">-->
-<!--<label for="style">Style</label>-->
-<!--<select id="style" class="form-control">-->
-<!--<option selected>Style</option>-->
-<!--<option>Convertible</option>-->
-<!--<option>Coupe</option>-->
-<!--<option>Hatchback</option>-->
-<!--<option>Minivan</option>-->
-<!--<option>Van</option>-->
-<!--<option>Pickup Truck</option>-->
-<!--<option>Sedan</option>-->
-<!--<option>SUV</option>-->
-<!--<option>Crossover</option>-->
-<!--<option>Wagon</option>-->
-<!--<option>Other</option>-->
-<!--</select>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container" style="padding-top: 30px">-->
-<!--<div class="row">-->
-<!--<div class="col-sm">-->
-<!--<button type="submit" class="btn btn-primary">Submit</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--</form>-->
-<!--</div>-->
 </body>
 </html>
