added to sales process

--- a/WestsideAuto/index.html
+++ b/WestsideAuto/index.html
@@ -21,13 +21,14 @@
 <div class="jumbotron">
     <h1 class="display-4">Westside Autos</h1>
     <p class="lead">Welcome to your all-in-one solution for purchasing and sales.</p>
+    <p></p>
     <hr class="my-4">
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <a href="saleCustomerSearch.html" class="btn homeOptions">Sell a Vehicle</a>
+            <a href="saleCustomerSearch.php" class="btn homeOptions">Sell a Vehicle</a>
         </div>
     </div>
 </div>
