--- a/WestsideAuto/saleNewCustomer.html
+++ b/WestsideAuto/saleNewCustomer.html
@@ -23,7 +23,7 @@
 </div>
 
 <div id="employeeFormTop" class="topDiv">
-    <a href="saleCustomerSearch.html"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
+    <a href="saleCustomerSearch.php"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
     <div class="container">
         <div class="row">
             <div class="col-sm">
