started linking customer to db

--- a/WestsideAuto/newCustomerForm.html
+++ b/WestsideAuto/newCustomerForm.html
@@ -30,17 +30,17 @@
                 <h1>Add a new customer</h1>
             </div>
         </div>
-        <form id="addCustomer">
+        <form action="insertIntoDB.php" method="post" id="addCustomer">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
                         <label for="customerLastName">Last Name</label>
-                        <input type="text" class="form-control" id="customerLastName"
+                        <input type="text" class="form-control" name="customer_last_name" id="customerLastName"
                                placeholder="Enter last name">
                     </div>
                     <div class="col-sm">
                         <label for="customerFirstName">First Name</label>
-                        <input type="text" class="form-control" id="customerFirstName"
+                        <input type="text" class="form-control" name="customer_first_name" id="customerFirstName"
                                placeholder="Enter first name">
                     </div>
                     <div class="col-sm">
