Better working DB

--- a/WestsideAuto/newCustomerForm.html
+++ b/WestsideAuto/newCustomerForm.html
@@ -119,11 +119,12 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="dln">Driver's Licence Number</label>
-                        <input type="text" class="form-control" name="driver_license_no" id="dln"
+                        <input type="text" class="form-control" name="drivers_license_no" id="dln"
                                placeholder="Enter driver's licence number">
                     </div>
                 </div>
             </div>
+            <input type="hidden" name="insert_into" value="customer">
             <div class="container" style="padding-top: 20px">
                 <div class="row">
                     <div class="col-sm">
