added vehicle lookup with some searh features

--- a/WestsideAuto/index.html
+++ b/WestsideAuto/index.html
@@ -38,7 +38,7 @@
             <a href="purchaseForm.html" class="btn homeOptions">Add a Vehicle to the Inventory</a>
         </div>
         <div class="col-sm">
-            <a href="#" class="btn homeOptions">Lookup Inventory</a>
+            <a href="lookupVehicleForm.html" class="btn homeOptions">Lookup Vehicles</a>
         </div>
     </div>
 </div>
