--- a/WestsideAuto/newCustomerForm.html
+++ b/WestsideAuto/newCustomerForm.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <label for="DOB">Date of Birth</label>
+                        <label for="DOB">Date of Birth (YYYY-DD-MM)</label>
                         <input type="date" class="form-control" name="customer_DOB" id="DOB"
                                placeholder="YYYY-MM-DD">
                     </div>
