--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -35,8 +35,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <label for="date">Date</label>
-                    <input type="date" class="form-control" id="date" name="date_of_purchase" placeholder="YYYY/DD/MM">
+                    <label for="date">Date (YYYY-DD-MM)</label>
+                    <input type="date" class="form-control" id="date" name="date_of_purchase" placeholder="YYYY-DD-MM">
                 </div>
             </div>
         </div>
