added lookup customer

--- a/WestsideAuto/index.html
+++ b/WestsideAuto/index.html
@@ -48,7 +48,7 @@
             <a href="newCustomerForm.html" class="btn homeOptions">Add a New Customer </a>
         </div>
         <div class="col-sm">
-            <a href="#" class="btn homeOptions">Lookup Customers</a>
+            <a href="lookupCustomerForm.html" class="btn homeOptions">Lookup Customers</a>
         </div>
     </div>
 </div>
