added repair estimates to purchase

--- a/WestsideAuto/lookupCustomerForm.html
+++ b/WestsideAuto/lookupCustomerForm.html
@@ -53,9 +53,9 @@
                     <div class="row">
                         <div class="col-sm">
                             <div class="form-check" style="padding-bottom: 10px;">
-                                <input class="form-check-input" type="radio" name="searchType" id="noPurchas"
+                                <input class="form-check-input" type="radio" name="searchType" id="noPurchase"
                                        value="noPurchase" checked>
-                                <label class="form-check-label" for="noPurchas">
+                                <label class="form-check-label" for="noPurchase">
                                     Never purchased a vehicle
                                 </label>
                             </div>
