--- a/WestsideAuto/newEmployeeForm.html
+++ b/WestsideAuto/newEmployeeForm.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 <div class="jumbotron">
-    <a href="index.html"><h1 class="display-4">Westside Autos</h1></a>
+    <a href="index.php"><h1 class="display-4">Westside Autos</h1></a>
     <hr class="my-4">
 </div>
 
 <div id="customerFormTop" class="topDiv">
-    <a href="index.html"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
+    <a href="index.php"><img src="./assets/backBtn.png" alt="back" class="backBtn"></a>
     <div class="container">
         <div class="row">
             <div class="col-sm">
