--- a/WestsideAuto/saleNewCustomer.html
+++ b/WestsideAuto/saleNewCustomer.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="jumbotron">
-    <a href="index.html"><h1 class="display-4">Westside Autos</h1></a>
+    <a href="index.php"><h1 class="display-4">Westside Autos</h1></a>
     <hr class="my-4">
 </div>
 
