--- a/WestsideAuto/newCustomerForm.html
+++ b/WestsideAuto/newCustomerForm.html
@@ -43,17 +43,17 @@
                         <input type="text" class="form-control" name="customer_first_name" id="customerFirstName"
                                placeholder="Enter first name">
                     </div>
-                    <!--<div class="col-sm">-->
-                        <!--<label for="customerPhone">Phone</label>-->
-                        <!--<input type="text" class="form-control" id="customerPhone"-->
-                               <!--placeholder="Enter phone number">-->
-                    <!--</div>-->
+                    <div class="col-sm">
+                        <label for="customerPhone">Phone</label>
+                        <input type="text" class="form-control" id="customerPhone"
+                               name="phone_no" placeholder="Enter phone number">
+                    </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <label for="DOB">Date of Birth (YYYY-DD-MM)</label>
+                        <label for="DOB">Date of Birth (YYYY-MM-DD)</label>
                         <input type="date" class="form-control" name="customer_DOB" id="DOB"
                                placeholder="YYYY-MM-DD">
                     </div>
