added sale lookup

--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -80,8 +80,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <label for="date">Date (YYYY-DD-MM)</label>
-                    <input type="date" class="form-control" id="date" name="date_of_purchase" placeholder="YYYY-DD-MM">
+                    <label for="date">Date (YYYY-MM-DD)</label>
+                    <input type="date" class="form-control" id="date" name="date_of_purchase" placeholder="YYYY-MM-DD">
                 </div>
             </div>
         </div>
@@ -182,18 +182,18 @@
                 </div>
             </div>
         </div>
-        <!--<div class="container">-->
-        <!--<div class="row">-->
-        <!--<div class="col-sm">-->
-        <!--<label for="bookPrice"> Book Price</label>-->
-        <!--<input type="text" class="form-control" id="bookPrice" placeholder="Enter the book price">-->
-        <!--</div>-->
-        <!--<div class="col-sm">-->
-        <!--<label for="purchasePrice"> Purchased Price</label>-->
-        <!--<input type="text" class="form-control" id="purchasePrice" placeholder="Enter the purchased price">-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <label for="bookPrice"> Book Price</label>
+                    <input type="text" class="form-control" id="bookPrice" name="book_price" placeholder="Enter the book price">
+                </div>
+                <div class="col-sm">
+                    <label for="purchasePrice"> Purchased Price</label>
+                    <input type="text" class="form-control" id="purchasePrice" name="price" placeholder="Enter the purchased price">
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm">
