fixed index.php link error

--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -202,14 +202,14 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <label for="purchase_id">purch id</label>
-                    <input type="text" class="form-control" id="purchase_id" name="purchase_ID" placeholder="">
-                </div>
-            </div>
-        </div>
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="col-sm">-->
+                    <!--<label for="purchase_id">purch id</label>-->
+                    <!--<input type="text" class="form-control" id="purchase_id" name="purchase_ID" placeholder="">-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <input type="hidden" name="insert_into" value="purchased">
         <div class="container">
             <div class="row">
