--- a/WestsideAuto/lookupCustomerForm.html
+++ b/WestsideAuto/lookupCustomerForm.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-sm">
                     <label for="drivers_licence_no">Drivers License Number</label>
-                    <input type="text" class="form-control" id="drivers_licence_no" name="drivers_licence_no"
+                    <input type="text" class="form-control" id="drivers_licence_no" name="drivers_license_no"
                            placeholder="Enter drivers license number">
                 </div>
                 <div class="container">
