--- a/WestsideAuto/newEmployeeForm.html
+++ b/WestsideAuto/newEmployeeForm.html
@@ -95,10 +95,10 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm">
-                        <label for="empid">Employee ID</label>
-                        <input type="text" class="form-control" name="empid" id="empid" placeholder="Enter employee id">
-                    </div>
+                    <!--<div class="col-sm">-->
+                        <!--<label for="empid">Employee ID</label>-->
+                        <!--<input type="text" class="form-control" name="empid" id="empid" placeholder="Enter employee id">-->
+                    <!--</div>-->
                     <div class="col-sm">
                         <label for="dept">Department</label>
                         <select id="dept" name="department" class="form-control">
