--- a/WestsideAuto/lookupVehicleForm.html
+++ b/WestsideAuto/lookupVehicleForm.html
@@ -73,7 +73,8 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="withWarranty" id="withWarranty" value="true">
+                                        <input class="form-check-input" type="checkbox" name="withWarranty"
+                                               id="withWarranty" value="true">
                                         <label class="form-check-label" for="withWarranty">With warranty</label>
                                     </div>
                                 </div>
