--- a/WestsideAuto/newEmployeeForm.html
+++ b/WestsideAuto/newEmployeeForm.html
@@ -54,7 +54,8 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" name="address" id="address" placeholder="Enter street address">
+                        <input type="text" class="form-control" name="address" id="address"
+                               placeholder="Enter street address">
                     </div>
                 </div>
             </div>
@@ -89,16 +90,13 @@
                 <div class="row">
                     <div class="col-sm">
                         <label for="postalCode">Postal Code</label>
-                        <input type="text" class="form-control" name="employee_postal_code" id="postalCode" placeholder="Enter postal code">
+                        <input type="text" class="form-control" name="employee_postal_code" id="postalCode"
+                               placeholder="Enter postal code">
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <!--<div class="col-sm">-->
-                        <!--<label for="empid">Employee ID</label>-->
-                        <!--<input type="text" class="form-control" name="empid" id="empid" placeholder="Enter employee id">-->
-                    <!--</div>-->
                     <div class="col-sm">
                         <label for="dept">Department</label>
                         <select id="dept" name="department" class="form-control">
