--- a/WestsideAuto/purchaseForm.html
+++ b/WestsideAuto/purchaseForm.html
@@ -19,9 +19,9 @@
 <body>
 
 
-
 <!-- Modal -->
-<div class="modal fade" id="damageModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="damageModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -42,18 +42,19 @@
                         <div class="row">
                             <div class="col-sm">
                                 <label for="problem">Problem</label>
-                                <input type="text" class="form-control" id="problem" name="problem" placeholder="Describe problem">
+                                <input type="text" class="form-control" id="problem" name="problem"
+                                       placeholder="Describe problem">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm">
                                 <label for="estRepairCost">Estimated repair cost</label>
-                                <input type="text" class="form-control" id="estRepairCost" name="estRepairCost" placeholder="$">
+                                <input type="text" class="form-control" id="estRepairCost" name="estRepairCost"
+                                       placeholder="$">
                             </div>
                         </div>
                     </div>
                     <a class="btn btn-primary" onclick="checkInputModal('addDmg')">Submit</a>
-                    <!--<button class="btn btn-primary" style="margin-top: 10px;">Submit</button>-->
                 </form>
             </div>
             <div class="modal-footer">
@@ -186,11 +187,13 @@
             <div class="row">
                 <div class="col-sm">
                     <label for="bookPrice"> Book Price</label>
-                    <input type="text" class="form-control" id="bookPrice" name="book_price" placeholder="Enter the book price">
+                    <input type="text" class="form-control" id="bookPrice" name="book_price"
+                           placeholder="Enter the book price">
                 </div>
                 <div class="col-sm">
                     <label for="purchasePrice"> Purchased Price</label>
-                    <input type="text" class="form-control" id="purchasePrice" name="price" placeholder="Enter the purchased price">
+                    <input type="text" class="form-control" id="purchasePrice" name="price"
+                           placeholder="Enter the purchased price">
                 </div>
             </div>
         </div>
@@ -202,30 +205,18 @@
                 </div>
             </div>
         </div>
-        <!--<div class="container">-->
-            <!--<div class="row">-->
-                <!--<div class="col-sm">-->
-                    <!--<label for="purchase_id">purch id</label>-->
-                    <!--<input type="text" class="form-control" id="purchase_id" name="purchase_ID" placeholder="">-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
         <input type="hidden" name="insert_into" value="purchased">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#damageModal"-->
-                            <!--onclick="checkVIN(vin)" style="margin-top: 10px;">-->
-                        <!--Add Repair-->
-                    <!--</button>-->
-                    <a class="btn btn-primary" onclick="checkVIN('vin')" style="margin-top: 10px; color: white;">Add Repair</a>
+                    <a class="btn btn-primary" onclick="checkVIN('vin')" style="margin-top: 10px; color: white;">Add
+                        Repair</a>
                 </div>
             </div>
         </div>
         <div class="container" style="padding-top: 30px">
             <div class="row">
                 <div class="col-sm">
-                    <!--<button class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</button>-->
                     <a class="btn btn-primary" onclick="checkInputs('purchaseInfo')">Submit</a>
                     <button class="btn btn-secondary" type="reset" value="Reset">Reset</button>
                 </div>
